Added slideshow of staff and office to About section of web-site.

--- a/css/style_supersmiles_main.css
+++ b/css/style_supersmiles_main.css
@@ -210,6 +210,10 @@ a:hover {
 			margin-top: 20px;
 			width: 100%;
 		}
+		#head-shot img{
+			width: 200px;
+		}
+		
 		#main-content h2 {
 			padding-top: 10px;
 		}
