Finished refactoring all html files.

--- a/includes/businesshours.html
+++ b/includes/businesshours.html
@@ -1,3 +1,4 @@
+            <h3>Business Hours:</h3>
             <p><span class="tab">Sunday:</span> Closed
             <br/><span class="tab">Monday:</span> 10 a.m. - 4 p.m.
             <br/><span class="tab">Tuesday:</span> 10 a.m. - 4 p.m.
