--- a/includes/footer.html
+++ b/includes/footer.html
@@ -14,7 +14,7 @@
         </div>
 		
 		<script>
-			$( "#business-hours" ).load( "includes/hours.html");
+			$( "#business-hours" ).load( "includes/businesshours.html");
 		</script>
 		
         <div id="menu">
