--- a/includes/footer.html
+++ b/includes/footer.html
@@ -1,12 +1,15 @@
    <footer>
+    	<div id="social-icons">
+        	<a href="https://www.facebook.com/supersmilesburlington" title="Follow us on Facebook." alt="Follow us on Facebook." target="_blank"><img src="images/universal/socialicons/facebook_128px_grey.png"/></a>
+            <a href="https://plus.google.com/104855966085198301926/about" title="Follow us on Google Plus." alt="Follow us on Google Plus." target="_blank"><img src="images/universal/socialicons/googleplus_128px_grey.png" /></a>
+        </div>
         <div id="contact-info">
         	<h3>Contact Info:</h3>
             <p>Super Smiles Dental
             <br /><a href="https://maps.google.com/maps?q=54+Middlesex+Turnpike,+Suite+104,+Burlington,+MA+01803&hl=en&ll=42.472793,-71.212971&spn=0.008958,0.013304&sll=37.0625,-95.677068&sspn=39.320439,60.732422&hnear=54+Middlesex+Turnpike+%23104,+Burlington,+Massachusetts+01803&t=m&z=16" alt="Our office is located at 54 Middlesex Turnpike, Suite 104, Burlington, MA 01803. Click to view our location on Google Maps." title="Our office is located at 54 Middlesex Turnpike, Suite 104, Burlington, MA 01803. Click to view our location on Google Maps." target="_blank">54 Middlesex Turnpike, Suite 104
             <br/>Burlington, MA 01803</a></p>
             
-            <p>781.272.1288 (phone)
-            <!--<br/>123.456.7890 (fax)!-->
+            <p><a href="tel:7812721288">781.272.1288 (PHONE)</a>
             <br/><a href="mailto:info@supersmilesburlington.com" alt="For general inquiries, email us at info@supersmilesburlington.com" title="For general inquiries, email us at info@supersmilesburlington.com">info@supersmilesburlington.com</a>
             <br/><a href="index.html" alt="Super Smiles Dental Burlington" title="Super Smiles Dental Burlington">supersmilesburlington.com</a></p>
        </div>
