--- a/includes/rightnav.html
+++ b/includes/rightnav.html
@@ -1,25 +1,53 @@
+ <!-- SIDEBAR CONTENT-->      
+ 
+        <!-- Lightbox2 PhotoGallery - source: http://lokeshdhakar.com/projects/lightbox2/ -->
+        <link href="js_lightbox/css/lightbox.css" rel="stylesheet" />
+        <script type="text/javascript" src="js_lightbox/js/jquery-1.11.0.min.js"></script>
+        <script type="text/javascript" src="js_lightbox/js/lightbox.min.js"></script>
+                 
         <aside>
+        	<!-- Google Map -->
             <div id="map">
                 <div id="google-map">
-                <iframe width="255" height="245" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?q=54+Middlesex+Turnpike,+Suite+104,+Burlington,+MA+01803&amp;hl=en&amp;sll=37.0625,-95.677068&amp;sspn=39.320439,60.732422&amp;hnear=54+Middlesex+Turnpike+%23104,+Burlington,+Massachusetts+01803&amp;t=m&amp;ie=UTF8&amp;hq=&amp;ll=42.472793,-71.21295&amp;spn=0.015511,0.021801&amp;z=14&amp;iwloc=A&amp;output=embed"></iframe><br /><small><a href="https://maps.google.com/maps?q=54+Middlesex+Turnpike,+Suite+104,+Burlington,+MA+01803&amp;hl=en&amp;sll=37.0625,-95.677068&amp;sspn=39.320439,60.732422&amp;hnear=54+Middlesex+Turnpike+%23104,+Burlington,+Massachusetts+01803&amp;t=m&amp;ie=UTF8&amp;hq=&amp;ll=42.472793,-71.21295&amp;spn=0.015511,0.021801&amp;z=14&amp;iwloc=A&amp;source=embed" style="color:#0000FF;text-align:left" alt="Our office is located at 54 Middlesex Turnpike, Suite 104, Burlington, MA 01803. Click to view our location on Google Maps." title="Our office is located at 54 Middlesex Turnpike, Suite 104, Burlington, MA 01803. Click to view our location on Google Maps." target="_blank">View Larger Map</a></small>
+                <iframe width="255" height="245" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?sll=42.472789,-71.212202&amp;sspn=0.0060776,0.0109864&amp;cid=11195814849048956849&amp;q=Super+Smiles+Dental&amp;ie=UTF8&amp;hq=&amp;hnear=&amp;ll=42.472789,-71.212202&amp;spn=0.006295,0.006295&amp;t=m&amp;iwloc=A&amp;output=embed"></iframe><br /><small><a href="https://maps.google.com/maps?sll=42.472789,-71.212202&amp;sspn=0.0060776,0.0109864&amp;cid=11195814849048956849&amp;q=Super+Smiles+Dental&amp;ie=UTF8&amp;hq=&amp;hnear=&amp;ll=42.472789,-71.212202&amp;spn=0.006295,0.006295&amp;t=m&amp;iwloc=A&amp;source=embed" style="color:#0000FF;text-align:left" alt="Our office is located at 54 Middlesex Turnpike, Suite 104, Burlington, MA 01803. Click to view our location on Google Maps." title="Our office is located at 54 Middlesex Turnpike, Suite 104, Burlington, MA 01803. Click to view our location on Google Maps." target="_blank">View Larger Map</a></small>
                 </div>
                 <h4>Located Near Burlington Mall</h4>
-                <a href="https://maps.google.com/maps?q=54+Middlesex+Turnpike,+Suite+104,+Burlington,+MA+01803&hl=en&ll=42.472793,-71.212971&spn=0.008958,0.013304&sll=37.0625,-95.677068&sspn=39.320439,60.732422&hnear=54+Middlesex+Turnpike+%23104,+Burlington,+Massachusetts+01803&t=m&z=16" alt="Our office is located at 54 Middlesex Turnpike, Suite 104, Burlington, MA 01803. Click to view our location on Google Maps." title="Our office is located at 54 Middlesex Turnpike, Suite 104, Burlington, MA 01803. Click to view our location on Google Maps." target="_blank">
+                <a href="https://maps.google.com/maps?sll=42.472789,-71.212202&amp;sspn=0.0060776,0.0109864&amp;cid=11195814849048956849&amp;q=Super+Smiles+Dental&amp;ie=UTF8&amp;hq=&amp;hnear=&amp;ll=42.472789,-71.212202&amp;spn=0.006295,0.006295&amp;t=m&amp;iwloc=A&amp;source=embed" alt="Our office is located at 54 Middlesex Turnpike, Suite 104, Burlington, MA 01803. Click to view our location on Google Maps." title="Our office is located at 54 Middlesex Turnpike, Suite 104, Burlington, MA 01803. Click to view our location on Google Maps." target="_blank">
                 	<h5>54 Middlesex Turnpike, Suite 104 
-                	<br/>Burlington, MA 01803</h5>
+                	<br/>Burlington, Massachusetts 01803</h5>
                 </a>
             </div>
+            
+            <!-- Photo Tour - Lightbox2 PhotoGallery -->            
+            <div id="photo-tour">
+            	<a href="images/universal/officetour/DSC_0069_rt_exterior_950x634.jpg" data-lightbox="Office" data-title="caption 1">
+                <h4>Tour Our Office</h4>
+                <h5>Click to view photo tour.</h5>
+                </a>
+                <a href="images/universal/officetour/DSC_0168_frontdesk_950x634.jpg" data-lightbox="Office" data-title="caption 2"></a>
+                <a href="images/universal/officetour/DSC_0163_waitingarea_950x643.jpg" data-lightbox="Office" data-title="caption 3"></a>
+                <a href="images/universal/officetour/office3-1-2_rt_examroom_800x929.jpg" data-lightbox="Office" data-title="caption 4"></a>
+                <a href="images/universal/officetour/DSC_0092_rt_instruments_800x534.jpg" data-lightbox="Office" data-title="caption 5"></a>
+                <a href="images/universal/officetour/DSC_4911_rt_steralizationA_950x631.jpg" data-lightbox="Office" data-title="caption 6"></a>
+                <a href="images/universal/officetour/DSC_4890_rt_steralizationB_950x631.jpg" data-lightbox="Office" data-title="caption 7"></a>
+                <a href="images/universal/officetour/DSC_0148_rt_staff_950x634.jpg" data-lightbox="Office" data-title="caption 8"></a>
+            </div>
+            
+            <!-- Our Services -->
             <a href="services.html" alt="Click to learn about our dental services." title="Click to learn about our dental services."><div id="services-feature">
             	<img src="images/universal/aside/Fotolia_49296361_S.jpg" alt="Click to learn about our dental services." title="Click to learn about our dental services."/>
                 <h4>Learn About Our Services</h4>
             </div></a>
             <div id="appointment">
                 <h4>Make an Appointment</h4>
+                <h5><span class="phone"><a href="tel:7812721288">781.272.1288</a></span></h5>
                 <h5><a href="mailto:appointments@supersmilesburlington.com" alt="Make an appointment: Email us at appointments@supersmilesburlington.com" title="Make an appointment: Email us at appointments@supersmilesburlington.com">appointments@</br>supersmilesburlington.com</a>
-                <br/>781.272.1288</h5>
+                </h5>
             </div>
+            
+            <!-- Memberships & Affiliations -->
             <div id="member-logos">
-            	<h4>Memberships and Affiliations:</h4>
+            	<h4>Memberships &amp; Affiliations:</h4>
                 <a href="http://www.massdental.org" target="_blank">
                     <img src="http://www.massdental.org/uploadedImages/6_About_Us/A Member Of Button_web.jpg" alt="A Member of the Massachusetts Dental Society" title="Click here to go to the Massachusetts Dental Society website." border="0" target="_blank"/>
 					<h5>Massachusetts Dental Society</h5>
@@ -29,4 +57,5 @@
                 	<h5>American Dental Association</h5>
                 </a>
   			</div>
+   
         </aside>
