--- a/includes/topbar.html
+++ b/includes/topbar.html
@@ -1,8 +1,8 @@
-        <div id="bar">
+      <div id="bar">
             <p><span>Make An Appointment:</span></p>
             <p><a href="mailto:appointments@supersmilesburlington.com" alt="Make an appointment: Email us at appointments@supersmilesburlington.com" title="Make an appointment: Email us at appointments@supersmilesburlington.com">appointments@supersmilesburlington.com</a></p>
             <p><span>|</span></p>
-            <p>781.272.1288</p> 
+            <p><a href="tel:7812721288">781.272.1288</a></p> 
             <p><span>|</span></p> 
             <p><a href="https://maps.google.com/maps?q=54+Middlesex+Turnpike,+Suite+104,+Burlington,+MA+01803&hl=en&ll=42.472793,-71.212971&spn=0.008958,0.013304&sll=37.0625,-95.677068&sspn=39.320439,60.732422&hnear=54+Middlesex+Turnpike+%23104,+Burlington,+Massachusetts+01803&t=m&z=16" alt="Our office is located at 54 Middlesex Turnpike, Suite 104, Burlington, MA 01803. Click to view our location on Google Maps." title="Our office is located at 54 Middlesex Turnpike, Suite 104, Burlington, MA 01803. Click to view our location on Google Maps." target="_blank">
             54 Middlesex Turnpike, Suite 104, Burlington, MA 01803
