Changed code so that HK logo comes from repo not from HK website.

--- a/includes/hklogo.html
+++ b/includes/hklogo.html
@@ -1,7 +1,7 @@
 <div id="hk-design">
     <p>WEBSITE DESIGN</p> 
         <a href="http://www.helenkimeria.com" alt="Website design by Helen Kimeria Design." title="Website design by Helen Kimeria Design." target="_blank">
-        	<p><img src="http://www.helenkimeria.com/hk-website-design-badges/super-smiles/images/HelenKimeria_LOGO.png" alt="Website design by Helen Kimeria. Helen Kimeria's services include Graphic Design, Web Design, Visual Identity Design and Illustration. Click here for Helen Kimeria's website." title="Website design by Helen Kimeria. Helen Kimeria's services include Graphic Design, Web Design, Visual Identity Design and Illustration. Click here for Helen Kimeria's website."/></p>
+        	<p><img src="images/hklogo/HelenKimeria_LOGO.png" alt="Website design by Helen Kimeria. Helen Kimeria's services include Graphic Design, Web Design, Visual Identity Design and Illustration. Click here for Helen Kimeria's website." title="Website design by Helen Kimeria. Helen Kimeria's services include Graphic Design, Web Design, Visual Identity Design and Illustration. Click here for Helen Kimeria's website."/></p>
         	<p>Helen Kimeria</p>
         </a>
 </div>
