--- a/includes/footer.html
+++ b/includes/footer.html
@@ -10,7 +10,7 @@
             <br/>Burlington, MA 01803</a></p>
             
             <p><a href="tel:7812721288">781.272.1288 (PHONE)</a>
-            <br/><a href="mailto:info@supersmilesburlington.com" alt="For general inquiries, email us at info@supersmilesburlington.com" title="For general inquiries, email us at info@supersmilesburlington.com">info@supersmilesburlington.com</a>
+            <br/><a href="mailto:appointments@supersmilesburlington.com" alt="For general inquiries, email us at appointments@supersmilesburlington.com" title="For general inquiries, email us at appointments@supersmilesburlington.com">appointments@supersmilesburlington.com</a>
             <br/><a href="index.html" alt="Super Smiles Dental Burlington" title="Super Smiles Dental Burlington">supersmilesburlington.com</a></p>
        </div>
         <div id="business-hours">
