--- a/includes/footer.html
+++ b/includes/footer.html
@@ -11,7 +11,7 @@
             
             <p><a href="tel:7812721288">781.272.1288 (PHONE)</a>
             <br/><a href="mailto:appointments@supersmilesburlington.com" alt="For general inquiries, email us at appointments@supersmilesburlington.com" title="For general inquiries, email us at appointments@supersmilesburlington.com">appointments@supersmilesburlington.com</a>
-            <br/><a href="index.html" alt="Super Smiles Dental Burlington" title="Super Smiles Dental Burlington">supersmilesburlington.com</a></p>
+            <br/><a href="index.html" alt="Super Smiles Dental Burlington" title="Super Smiles Dental Burlington">www.supersmilesburlington.com</a></p>
        </div>
         <div id="business-hours">
         </div>
