Added pictures and modified others.

--- a/includes/rightnav.html
+++ b/includes/rightnav.html
@@ -21,12 +21,13 @@
                 </a>
                 <a href="images/universal/officetour/DSC_0168_frontdesk_950x634.jpg" data-lightbox="Office" data-title="The front desk will check you in and help you navigate through your treatment plan, insurance benefits, and finance questions."></a>
                 <a href="images/universal/officetour/DSC_0163_waitingarea_950x643.jpg" data-lightbox="Office" data-title="Our comfortable waiting area invites you to relax, catch up on some reading, news, and entertainment."></a>
+                <a href="images/universal/officetour/hall.jpg" data-lightbox="Office" data-title="Our space is designed to be warm and nurturing so you feel better just by being here."></a>
                 <a href="images/universal/officetour/office3-1-2_rt_examroom_800x929.jpg" data-lightbox="Office" data-title="Our modern operatories feature the latest in treatment technologies and the most comfortable chairs in the world."></a>
-        <a href="images/universal/officetour/operatory-video.jpg" data-lightbox="Office" data-title="A 46 inch video monitor allows you to see in vivid detail the exam findings, X-rays, Photos, and Intra-Oral Video as we gather it in real time."></a>
+                <a href="images/universal/officetour/operatory-video.jpg" data-lightbox="Office" data-title="A 46 inch video monitor allows you to see in vivid detail the exam findings, X-rays, Photos, and Intra-Oral Video as we gather it in real time."></a>
                 <a href="images/universal/officetour/DSC_4911_rt_steralizationA_950x631.jpg" data-lightbox="Office" data-title="CLEAN = SAFE.  Our modern sterilization center is open to view so you can actively observe our sterilization process."></a>
                 <a href="images/universal/officetour/DSC_0092_rt_instruments_800x534.jpg" data-lightbox="Office" data-title="Quality instruments help ensure quality care.  We source all our instruments only from reputable American vendors."></a>
         <a href="images/universal/officetour/DSC_4890_rt_steralizationB_950x631.jpg" data-lightbox="Office" data-title="Our sterilization center in action; here is the autoclave in use. "></a>
-                <a href="images/universal/officetour/DSC_0148_rt_staff_950x634.jpg" data-lightbox="Office" data-title="Our Super Smiles Dental Professionals are here to help you."></a>
+                <a href="images/universal/officetour/tour-team-photo.jpg" data-lightbox="Office" data-title="Our Super Smiles Dental Professionals are here to help you."></a>
             </div>
             
             <!-- Our Services -->
