Updated to remove vacation message.

--- a/includes/footer.html
+++ b/includes/footer.html
@@ -9,7 +9,7 @@
             <br /><a href="https://maps.google.com/maps?q=54+Middlesex+Turnpike,+Suite+104,+Burlington,+MA+01803&hl=en&ll=42.472793,-71.212971&spn=0.008958,0.013304&sll=37.0625,-95.677068&sspn=39.320439,60.732422&hnear=54+Middlesex+Turnpike+%23104,+Burlington,+Massachusetts+01803&t=m&z=16" alt="Our office is located at 54 Middlesex Turnpike, Suite 104, Burlington, MA 01803. Click to view our location on Google Maps." title="Our office is located at 54 Middlesex Turnpike, Suite 104, Burlington, MA 01803. Click to view our location on Google Maps." target="_blank">54 Middlesex Turnpike, Suite 104
             <br/>Burlington, MA 01803</a></p>
             
-            <p><a href="tel:7812721288">781.272.1288 (PHONE)</a>
+            <p><a href="tel:7812721288">Phone: 781.272.1288</a>
             <br/><a href="mailto:appointments@supersmilesburlington.com" alt="For general inquiries, email us at appointments@supersmilesburlington.com" title="For general inquiries, email us at appointments@supersmilesburlington.com">appointments@supersmilesburlington.com</a>
             <br/><a href="index.html" alt="Super Smiles Dental Burlington" title="Super Smiles Dental Burlington">www.supersmilesburlington.com</a></p>
        </div>
