Fixed issue of includes not being set correctly in contacts page.  Also removed redundant code.

--- a/includes/footer.html
+++ b/includes/footer.html
@@ -14,10 +14,12 @@
             <br/><a href="index.html" alt="Super Smiles Dental Burlington" title="Super Smiles Dental Burlington">www.supersmilesburlington.com</a></p>
        </div>
         <div id="business-hours">
+            <h3>Business Hours:</h3>
+            <div id="hours"/>
         </div>
 		
 		<script>
-			$( "#business-hours" ).load( "includes/businesshours.html");
+			$( "#hours" ).load( "includes/businesshours.html");
 		</script>
 		
         <div id="menu">
