Changed endpoint on google plus url to 'default' from 'about' to work around a stupid google script-kiddie error.

--- a/includes/footer.html
+++ b/includes/footer.html
@@ -1,7 +1,8 @@
    <footer>
     	<div id="social-icons">
         	<a href="https://www.facebook.com/supersmilesburlington" title="Follow us on Facebook." alt="Follow us on Facebook." target="_blank"><img src="images/universal/socialicons/facebook_128px_grey.png"/></a>
-            <a href="https://plus.google.com/104855966085198301926/about" title="Follow us on Google Plus." alt="Follow us on Google Plus." target="_blank"><img src="images/universal/socialicons/googleplus_128px_grey.png" /></a>
+            <!-- Added 'default' to end of google plus url to force it to show the good old plus page.-->
+            <a href="https://plus.google.com/104855966085198301926/default" title="Follow us on Google Plus." alt="Follow us on Google Plus." target="_blank"><img src="images/universal/socialicons/googleplus_128px_grey.png" /></a>
         </div>
         <div id="contact-info">
         	<h3>Contact Info:</h3>
