--- a/includes/rightnav.html
+++ b/includes/rightnav.html
@@ -38,7 +38,7 @@
             <div id="appointment">
                 <h4>Make an Appointment</h4>
                 <h5><span class="phone"><a href="tel:7812721288">781.272.1288</a></span></h5>
-                <h5><a href="mailto:appointments@supersmilesburlington.com" alt="Make an appointment: Email us at appointments@supersmilesburlington.com" title="Make an appointment: Email us at appointments@supersmilesburlington.com">appointments@</br>supersmilesburlington.com</a>
+                <h5><a href="mailto:info@supersmilesburlington.com" alt="Make an appointment: Email us at info@supersmilesburlington.com" title="Make an appointment: Email us at info@supersmilesburlington.com">info@</br>supersmilesburlington.com</a>
                 </h5>
             </div>
             
