--- a/includes/topbar.html
+++ b/includes/topbar.html
@@ -1,6 +1,6 @@
       <div id="bar">
             <p><span>Make An Appointment:</span></p>
-            <p><a href="mailto:appointments@supersmilesburlington.com" alt="Make an appointment: Email us at appointments@supersmilesburlington.com" title="Make an appointment: Email us at appointments@supersmilesburlington.com">appointments@supersmilesburlington.com</a></p>
+            <p><a href="mailto:info@supersmilesburlington.com" alt="Make an appointment: Email us at info@supersmilesburlington.com" title="Make an appointment: Email us at info@supersmilesburlington.com">info@supersmilesburlington.com</a></p>
             <p><span>|</span></p>
             <p><a href="tel:7812721288">781.272.1288</a></p> 
             <p><span>|</span></p> 
