--- a/includes/hklogo.html
+++ b/includes/hklogo.html
@@ -1,6 +1,6 @@
 <div id="hk-design">
     <p>WEBSITE DESIGN</p> 
-        <a href="http://www.helenkimeria.com" alt="Website design by Helen Kimeria Design." title="Website design by Helen Kimeria Design." target="_blank">
+        <a href="https://www.helenkimeria.com" alt="Website design by Helen Kimeria Design." title="Website design by Helen Kimeria Design." target="_blank">
         	<p><img src="images/hklogo/HelenKimeria_LOGO.png" alt="Website design by Helen Kimeria. Helen Kimeria's services include Graphic Design, Web Design, Visual Identity Design and Illustration. Click here for Helen Kimeria's website." title="Website design by Helen Kimeria. Helen Kimeria's services include Graphic Design, Web Design, Visual Identity Design and Illustration. Click here for Helen Kimeria's website."/></p>
         	<p>Helen Kimeria</p>
         </a>
