--- a/includes/rightnav.html
+++ b/includes/rightnav.html
@@ -45,13 +45,13 @@
             <!-- Memberships & Affiliations -->
             <div id="member-logos">
                 <h4>Memberships &amp; Affiliations:</h4>
-                <a href="http://www.massdental.org" target="_blank">
+                <a href="https://www.massdental.org" target="_blank">
 				  <!--
-                    <img src="http://www.massdental.org/uploadedImages/6_About_Us/A Member Of Button_web.jpg" alt="A Member of the Massachusetts Dental Society" title="Click here to go to the Massachusetts Dental Society website." border="0" target="_blank"/>
+                    <img src="https://www.massdental.org/uploadedImages/6_About_Us/A Member Of Button_web.jpg" alt="A Member of the Massachusetts Dental Society" title="Click here to go to the Massachusetts Dental Society website." border="0" target="_blank"/>
 					-->
                     <h5>Massachusetts Dental Society</h5>
                 </a>
-                <a href="http://www.ada.org" target="_blank">
+                <a href="https://www.ada.org" target="_blank">
                     <img src="images/universal/aside/ada.org-button-vert-large.png" alt="A Member of the American Dental Association" title="Click here to go to the American Dental Association website." target="_blank"/>
                     <h5>American Dental Association</h5>
                 </a>
